<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image"
            android:gravity="center"
            android:src="@drawable/q1" />
       <TextView
           android:id="@+id/textQuestion"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:gravity="center"
           android:textColor="#363A43"
           android:textSize="22sp"
           android:text="@string/exampleTextView"/>
        <LinearLayout
            android:id="@+id/progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="20"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"/>
            <TextView
                android:id="@+id/tv_progess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="#7A8089"
                android:textSize="14sp"
                tools:text="0/20"/>

        </LinearLayout>
            <TextView
                android:id="@+id/tv_optionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/default_option_border_bg"
                android:padding="15dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Apple"/>
        <TextView
            android:id="@+id/tv_optionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/default_option_border_bg"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            tools:text="Apple"/>
        <TextView
            android:id="@+id/tv_optionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/default_option_border_bg"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            tools:text="Apple"/>
        <TextView
            android:id="@+id/tv_optionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/default_option_border_bg"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            tools:text="Apple"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/submitButton"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
        </LinearLayout>

</ScrollView>